# tsdistances_gpu

./: .gitignore  Cargo.toml  adtw_result.csv  build.rs  dtw_result.csv  erp_result.csv  lcss_result.csv  msm_result.csv  optimized_shader.spv  rust-toolchain.toml  rustc-ice-2025-06-04T13_17_11-32686.txt  twe_result.csv  wdtw_result.csv
src/: kernels.rs  lib.rs  shader_load.rs  tests.rs  utils.rs  warps.rs
tests/: CBF_DTW.csv  test_distances.rs
tests/ACSF1/: ACSF1_DTW_RESULTS.csv  ACSF1_TRAIN.csv
tests/data/: erp_ts.csv  ts.csv
tests/results/: adtw.csv  dtw.csv  erp.csv  lcss.csv  msm.csv  twe.csv  wdtw.csv
tsdistances_gpu/: Cargo.toml
tsdistances_gpu/src/: lib.rs
