cargo-features = ["edition2024"]

[package]
name = "tsdistances"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["dylib"]

[build-dependencies]
spirv-builder = { git = "https://github.com/Rust-GPU/rust-gpu.git", version = "0.9.0" }
rspirv = "0.12.0"
fxhash = "0.2.1"
bytemuck = { version = "1.22.0", features = ["derive"] }
spirv-tools = "0.10.0"

[profile.release.build-override]
opt-level = 3
codegen-units = 16

[profile.dev.build-override]
opt-level = 3

[target.'cfg(not(target_arch = "spirv"))'.dependencies]
vulkano = { version = "0.35.1" }
dashmap = "6.1.0"

[target.'cfg(target_arch = "spirv")'.dependencies]
spirv-std = { version = "0.9" }

[dependencies]
bytemuck = { version = "1.22.0", features = ["derive"] }

[dev-dependencies]
csv = "1.3.1"
