cargo-features = ["edition2024"]

[package]
name = "tsdistances_gpu"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["dylib", "rlib"]

[build-dependencies]
spirv-builder = { git = "https://github.com/Rust-GPU/rust-gpu.git", default-features = false }

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
strip = true

[profile.release.build-override]
opt-level = 3
codegen-units = 16

[profile.dev.build-override]
opt-level = 3
debug = true

[target.'cfg(not(target_arch = "spirv"))'.dependencies]
vulkano = { version = "0.35.1" }
dashmap = "6.1.0"
rspirv = "0.12.0"

[target.'cfg(target_arch = "spirv")'.dependencies]
spirv-std = {  git = "https://github.com/Rust-GPU/rust-gpu.git", default-features = false }

[dependencies]
bytemuck = { version = "1.23.1", features = ["derive"] }

[dev-dependencies]
csv = "1.3.1"

[features]
default = ["use-installed-tools"]
use-compiled-tools = [
    "spirv-builder/use-compiled-tools",
]
use-installed-tools = [
    "spirv-builder/use-installed-tools",
]
